--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flexbox</title>
     <style>
-        *{
+        * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
         }
         .container {
-            height: 200%;
+             height: 100%;
             display: flex;
             flex-direction: row;
-            flex-wrap: wrap;
-            justify-content: center;
-            align-items: center;
+        
+            justify-content:space-around;
+            
         }
         .child {
             width: 20%;
@@ -32,6 +32,6 @@
         <div class="child"></div>
         <div class="child"></div>
         <div class="child"></div>
-    </div>
+    </div><!--container-->
 </body>
 </html>
