--- a/Css e grid/index.html
+++ b/Css e grid/index.html
@@ -34,6 +34,30 @@
             <p>Legenda</p>
         </div>
         <div>
+            <img src="../Css e grid/img/lobo2.jpg">
+            <p>Legenda</p>
+        </div>
+        <div>
+            <img src="../Css e grid/img/lobo1.jpg">
+            <p>Legenda</p>
+        </div>
+        <div>
+            <img src="../Css e grid/img/lobo3.jpg">
+        </div>
+    </section>
+    
+    <h1>Section grid 1</h1>
+    
+    <section class="grid1">
+        <div>
+            <img src="../Css e grid/img/lobo1.jpg">
+            <p>Legenda</p>
+        </div>
+        <div>
+            <img src="../Css e grid/img/lobo2.jpg">
+            <p>Legenda</p>
+        </div>
+        <div>
             <img src="../Css e grid/img/lobo3.jpg">
             <p>Legenda</p>
         </div>
@@ -43,15 +67,38 @@
         </div>
         <div>
             <img src="../Css e grid/img/lobo2.jpg">
+            <p>Legenda</p>
+        </div>
+        <div>
+            <img src="../Css e grid/img/lobo3.jpg">
+            <p>Legenda</p>
+        </div>
+        <div>
+            <img src="../Css e grid/img/lobo1.jpg">
+            <p>Legenda</p>
+        </div>
+        <div>
+            <img src="../Css e grid/img/lobo2.jpg">
+            <p>Legenda</p>
+        </div>
+        <div>
+            <img src="../Css e grid/img/lobo3.jpg">
+            <p>Legenda</p>
+        </div>
+        <div>
+            <img src="../Css e grid/img/lobo3.jpg">
+            <p>Anuncio</p>
         </div>
     </section>
 
-    <section class="grid">
-        <div>
-            <img src="../Css e grid/img/lobo1.jpg">
-            <p>Legenda</p>
+    <h1>section Grid 2 </h1>
+
+    <section class="grid2">
+        <div class="video">
+            <img src=".//img/lobo1.jpg">
+            <h2>Como criar sites.</h2>
         </div>
-        <div>
+        <div class="sidebar">
             <img src="../Css e grid/img/lobo2.jpg">
             <p>Legenda</p>
         </div>
@@ -60,15 +107,12 @@
             <p>Legenda</p>
         </div>
         <div>
-            <img src="../Css e grid/img/lobo3.jpg">
-            <p>Legenda</p>
-        </div>
-        <div>
             <img src="../Css e grid/img/lobo1.jpg">
             <p>Legenda</p>
         </div>
         <div>
             <img src="../Css e grid/img/lobo2.jpg">
+            <p>Legenda</p>
         </div>
     </section>
 </body>
