--- a/Css e grid/index.html
+++ b/Css e grid/index.html
@@ -85,35 +85,55 @@
             <img src="../Css e grid/img/lobo3.jpg">
             <p>Legenda</p>
         </div>
-        <div>
+        <div class="Anúncio">
             <img src="../Css e grid/img/lobo3.jpg">
-            <p>Anuncio</p>
+            <p>Anúncio</p>
         </div>
     </section>
 
     <h1>section Grid 2 </h1>
 
     <section class="grid2">
+
         <div class="video">
             <img src=".//img/lobo1.jpg">
             <h2>Como criar sites.</h2>
         </div>
         <div class="sidebar">
-            <img src="../Css e grid/img/lobo2.jpg">
-            <p>Legenda</p>
-        </div>
-        <div>
-            <img src="../Css e grid/img/lobo3.jpg">
-            <p>Legenda</p>
-        </div>
-        <div>
-            <img src="../Css e grid/img/lobo1.jpg">
-            <p>Legenda</p>
-        </div>
-        <div>
-            <img src="../Css e grid/img/lobo2.jpg">
-            <p>Legenda</p>
+            <div>
+                <img src="../Css e grid/img/lobo1.jpg">
+                <p>Legenda</p>
+            </div>
+            <div>
+                <img src="../Css e grid/img/lobo2.jpg">
+                <p>Legenda</p>
+            </div>
+            <div>
+                <img src="../Css e grid/img/lobo3.jpg">
+                <p>Legenda</p>
+            </div>
+            <div>
+                <img src="../Css e grid/img/lobo1.jpg">
+                <p>Legenda</p>
+            </div>
         </div>
     </section>
+
+        <h1>section grid 3</h1>
+
+        <section class="grid3">
+             <div class="grid3-item">
+                <img src="../Css e grid/img/lobo4.jpg">
+                <p>Legenda</p>
+            </div>
+            <div class="grid3-item">
+                <img src="../Css e grid/img/lobo1.jpg">
+                <p>Legenda</p>
+            </div>
+            <div class="grid3-item">
+                <img src="../Css e grid/img/lobo2.jpg">
+                <p>Legenda</p>
+            </div>
+        </section>
 </body>
 </html>
