--- a/Css e grid/index.html
+++ b/Css e grid/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>css e grid</title>
+    <title>css e Grid</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,127 +12,125 @@
         <nav>
             <ul class="menu">
                 <li><a href="#">Sobre</a></li>
-                <li><a href="#">Produtos</a></li>
+                <li><a href="#">Produto</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
         </nav>
     </header>
 
-    <h1>Section flexbox</h1>
+        <h1>Section Flexbox</h1>
 
-    <section class="flex">
-        <div>
-            <img src="../Css e grid/img/lobo1.jpg">
-            <p>Legenda</p>
-        </div>
-        <div>
-            <img src="../Css e grid/img/lobo2.jpg">
-            <p>Legenda</p>
-        </div>
-        <div>
-            <img src="../Css e grid/img/lobo3.jpg">
-            <p>Legenda</p>
-        </div>
-        <div>
-            <img src="../Css e grid/img/lobo2.jpg">
-            <p>Legenda</p>
-        </div>
-        <div>
-            <img src="../Css e grid/img/lobo1.jpg">
-            <p>Legenda</p>
-        </div>
-        <div>
-            <img src="../Css e grid/img/lobo3.jpg">
-        </div>
-    </section>
-    
-    <h1>Section grid 1</h1>
-    
-    <section class="grid1">
-        <div>
-            <img src="../Css e grid/img/lobo1.jpg">
-            <p>Legenda</p>
-        </div>
-        <div>
-            <img src="../Css e grid/img/lobo2.jpg">
-            <p>Legenda</p>
-        </div>
-        <div>
-            <img src="../Css e grid/img/lobo3.jpg">
-            <p>Legenda</p>
-        </div>
-        <div>
-            <img src="../Css e grid/img/lobo1.jpg">
-            <p>Legenda</p>
-        </div>
-        <div>
-            <img src="../Css e grid/img/lobo2.jpg">
-            <p>Legenda</p>
-        </div>
-        <div>
-            <img src="../Css e grid/img/lobo3.jpg">
-            <p>Legenda</p>
-        </div>
-        <div>
-            <img src="../Css e grid/img/lobo1.jpg">
-            <p>Legenda</p>
-        </div>
-        <div>
-            <img src="../Css e grid/img/lobo2.jpg">
-            <p>Legenda</p>
-        </div>
-        <div>
-            <img src="../Css e grid/img/lobo3.jpg">
-            <p>Legenda</p>
-        </div>
-        <div class="Anúncio">
-            <img src="../Css e grid/img/lobo3.jpg">
-            <p>Anúncio</p>
-        </div>
-    </section>
-
-    <h1>section Grid 2 </h1>
-
-    <section class="grid2">
-
-        <div class="video">
-            <img src=".//img/lobo1.jpg">
-            <h2>Como criar sites.</h2>
-        </div>
-        <div class="sidebar">
+        <section class="flex">
             <div>
-                <img src="../Css e grid/img/lobo1.jpg">
-                <p>Legenda</p>
+                <img src="img/lobo1.jpg" >
+                <p>legenda</p>
             </div>
             <div>
-                <img src="../Css e grid/img/lobo2.jpg">
-                <p>Legenda</p>
+                <img src="img/lobo2.jpg">
+                <p>legenda</p>
             </div>
             <div>
-                <img src="../Css e grid/img/lobo3.jpg">
-                <p>Legenda</p>
+                <img src="img/lobo3.jpg">
+                <p>legenda</p>
             </div>
             <div>
-                <img src="../Css e grid/img/lobo1.jpg">
-                <p>Legenda</p>
+                <img src="img/lobo1.jpg" >
+                <p>legenda</p>
             </div>
-        </div>
-    </section>
-
-        <h1>section grid 3</h1>
-
-        <section class="grid3">
-             <div class="grid3-item">
-                <img src="../Css e grid/img/lobo4.jpg">
-                <p>Legenda</p>
+            <div>
+                <img src="img/lobo2.jpg">
+                <p>legenda</p>
             </div>
+            <div>
+                <img src="img/lobo3.jpg">
+                <p>legenda</p>
+            </div>
+        </section>
+        <h1>Section Grid 1</h1>
+        <section class="grid1">
+            <div>
+                <img src="img/lobo1.jpg">
+                <p>legenda</p>
+            </div>
+            <div>
+                <img src="img/lobo2.jpg">
+                <p>legenda</p>
+            </div>
+            <div>
+                <img src="img/lobo3.jpg">
+                <p>legenda</p>
+            </div>
+            <div>
+                <img src="img/lobo3.jpg">
+                <p>legenda</p>
+            </div>
+            <div>
+                <img src="img/lobo2.jpg">
+                <p>legenda</p>
+            </div>
+            <div>
+                <img src="img/lobo1.jpg">
+                <p>legenda</p>
+            </div>
+            <div>
+                <img src="img/lobo2.jpg">
+                <p>legenda</p>
+            </div>
+            <div>
+                <img src="img/lobo3.jpg">
+                <p>legenda</p>
+            </div>
+            <div>
+                <img src="img/lobo3.jpg">
+                <p>legenda</p>
+            </div>
+            <div class="anuncio">
+                <img src="img/lobo1.jpg">
+                <p>anuncio</p>
+            </div>
+        </section>
+
+        <h1>Section Grid 2</h1> 
+
+        <section class="grid2"> 
+            <div class="video">
+                <img src="img/lobo1.jpg">
+                <h2>Como criar sites.</h2>
+            </div>
+            <div class="sidebar">
+                <div>
+                    <img src="img/lobo2.jpg">
+                    <p>legenda</p>
+                </div>
+                <div>
+                    <img src="img/lobo1.jpg">
+                    <p>legenda</p>
+                </div>
+                <div>
+                    <img src="img/lobo1.jpg">
+                    <p>legenda</p>
+                </div>
+                <div>
+                    <img src="img/lobo2.jpg">
+                    <p>legenda</p>
+                </div>
+            </div>
+        </section>
+
+        <h1>Section Grid3</h1>
+
+        <section class="grid3"> 
             <div class="grid3-item">
-                <img src="../Css e grid/img/lobo1.jpg">
-                <p>Legenda</p>
+                <img src="img/lobo4.jpg">
+                <p>legenda</p>
             </div>
-            <div class="grid3-item">
-                <img src="../Css e grid/img/lobo2.jpg">
-                <p>Legenda</p>
+            <div class="grid3-item" >
+                <img src="img/lobo1.jpg">
+                <p>legenda</p>
+            </div>
+            <div class="grid3-item" > 
+               <img src="img/lobo2.jpg">
+               <p>legenda</p>
             </div>
         </section>
 </body>
